DPC-428: Patient Entity now has timestamps and organization links
Updated patient entity (and downstream classes) to have created/updated times, as well as linking them back into a parent organization.

The parent org is not an FK lookup yet.